# proofai

./: .env.example  .gitignore  .mcp.json  AGENTS.md  LICENSE  PUBKEY.txt  README.md  index.html  package-lock.json  package.json  server.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
.github/workflows/: release-pypi.yml  release.yml
api/: mcp.ts
docs/: README.md  api-reference.md  authentication.md  eu-ai-act-guide.md  getting-started.md  pricing.md  sdk-reference.md  self-hosting.md
mcp/: SKILL.md  package.json
mcp/src/: index.ts
python/: README.md  pyproject.toml
python/src/proofai/: __init__.py  client.py  types.py
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.ts  types.ts
src/: App.tsx  index.css  tailwind.config.lov.json
src/api/: client.ts
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: auth.tsx  ed25519-verify.ts  hash-chain.ts  pdf-export.ts  pipeline-params.ts  polygon-verify.ts  proofai-pubkey.ts  thought-signature.ts
src/pages/: AIExecution.tsx  AISignature.tsx  AuditVerify.tsx  BlockchainAnchor.tsx  CognitiveAnalysis.tsx  Dashboard.tsx  EvidenceBundle.tsx  Login.tsx  Pricing.tsx  PromptCompressor.tsx  RegulatorPortal.tsx  Settings.tsx
supabase/: config.toml  schema.sql
supabase/functions/anchor/: index.ts
supabase/migrations/: 20260329000000_auth_and_billing.sql  20260329100000_ai_act_compliance.sql  20260329200000_fix_signup_trigger.sql  20260329300000_pay_per_proof.sql  20260329400000_regulator_access.sql  20260407000000_analysis_data.sql  20260412000001_purge_legacy_bundles.sql
(+21 files in other folders)
